compiler/testData/compileKotlinAgainstCustomBinaries/incompleteHierarchyInJava/output.txt
error: the following classes have incomplete hierarchies:
    test.Sub, unresolved: [Super]

compiler/testData/compileKotlinAgainstCustomBinaries/incompleteHierarchyInJava/source.kt:5:22: error: unresolved reference: foo
fun bar() = SubSub().foo()
                     ^
COMPILATION_ERROR